# polyglot_db

./: .gitignore  README.md  docker-compose.yml
analytics-service/: Dockerfile  README.md  main.py  requirements.txt
analytics-service/app/api/: routes.py
analytics-service/app/config/: __init__.py  settings.py
analytics-service/app/models/: __init__.py  metric.py
analytics-service/app/repositories/: __init__.py  base_repository.py  influxdb_client.py  metric_repository.py
analytics-service/app/services/: __init__.py  analytics_service.py
auth-service/: .env.example  README.md  package-lock.json  package.json
auth-service/src/: index.js
auth-service/src/controllers/: auth.controller.js
auth-service/src/database/: client.js
auth-service/src/middlewares/: auth.middleware.js
auth-service/src/repositories/: base.repository.js  session.repository.js  (+1 more)
business-service/: .env.example  Cargo.toml  README.md
business-service/src/: lib.rs  main.rs
business-service/src/api/: mod.rs  order_controller.rs  product_controller.rs  routes.rs
business-service/src/config/: mod.rs
business-service/src/errors/: mod.rs
business-service/src/models/: mod.rs  order.rs  product.rs
business-service/src/repositories/: mod.rs  mongodb.rs  order_repository.rs  postgres.rs  product_repository.rs  repository.rs
business-service/src/services/: mod.rs  order_service.rs  product_service.rs
docs/api/: auth-service.md
docs/architecture/: overview.md
docs/database/: selection-strategy.md
docs/development/: setup.md
docs/services/: auth-service.md
(+3 files in other folders)
